--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.8",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
