feat: update nginx conf

--- a/myserver.conf
+++ b/myserver.conf
@@ -1,9 +1,8 @@
 server{
   listen 80;
   listen [::]:80;
-  root /home/ec2-user/ticket-club/build;
+  root /usr/share/nginx/html;
   index index.html index.htm;
-  server_name claudia-teng.com;
 
   location / {
     try_files $uri /index.html;
@@ -18,67 +17,17 @@ server{
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
     proxy_set_header Host $host;
-    proxy_pass http://127.0.0.1:3000/socket.io/;
+    proxy_pass http://ticket-club-web/socket.io/;
   }
 
   location /api/ {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
-    proxy_pass http://127.0.0.1:3000/;
+    proxy_pass http://ticket-club-web:3000/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     add_header Access-Control-Allow-Origin *;
     add_header 'Content-Security-Policy' 'upgrade-insecure-requests';
-  }
-}
-
-
-server {
-  listen 443 ssl;
-  listen [::]:443 ssl;
-  index index.html index.htm;
-  root /home/ec2-user/ticket-club/build;
-  server_name claudia-teng.com;
-  ssl_certificate /etc/ssl/bundle.crt;
-  ssl_certificate_key /etc/ssl/private.key;
-  ssl_protocols TLSv1.2 TLSv1.3; 
-  ssl_session_cache shared:SSL:10m;
-  ssl_prefer_server_ciphers on;
-
-  ssl_stapling on;
-  ssl_stapling_verify on;
-
-  resolver 8.8.4.4 8.8.8.8 valid=300s;
-  resolver_timeout 10s;
-
-  ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384; # 4*100 A
-
-  ssl_ecdh_curve secp384r1;
-  ssl_session_timeout  10m;
-  ssl_session_tickets off; 
-  add_header X-Frame-Options "SAMEORIGIN";
-  add_header Strict-Transport-Security "max-age=63072000; includeSubDomains" always;
-  add_header X-XSS-Protection "1; mode=block";
-
-  location / {
-    try_files $uri /index.html;
-    include  /etc/nginx/mime.types;
-  }
-
-  location /socket.io/ {
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
-    proxy_set_header Host $host;
-    proxy_pass http://127.0.0.1:3000/socket.io/;
-  }
-
-  location /api/ {
-    add_header Access-Control-Allow-Origin *;
-    add_header 'Content-Security-Policy' 'upgrade-insecure-requests';
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_pass http://127.0.0.1:3000/;
   }
 }
