fix: nginx socket connect

--- a/myserver.conf
+++ b/myserver.conf
@@ -17,7 +17,7 @@ server{
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
     proxy_set_header Host $host;
-    proxy_pass http://ticket-club-web/socket.io/;
+    proxy_pass http://ticket-club-web:3000/socket.io/;
   }
 
   location /api/ {
