--- a/myserver.conf
+++ b/myserver.conf
@@ -8,7 +8,7 @@ server{
     try_files $uri /index.html;
   }
   location ~* \.(eot|ttf|woff|woff2)$ {
-    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Origin '*';
     include  /etc/nginx/mime.types;
   }
 
@@ -27,7 +27,28 @@ server{
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
-    add_header Access-Control-Allow-Origin *;
+    add_header Access-Control-Allow-Origin '*' always;
     add_header 'Content-Security-Policy' 'upgrade-insecure-requests';
+    if ($request_method = 'OPTIONS') {
+      add_header 'Access-Control-Allow-Origin' '*' always;
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+      add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+      add_header 'Access-Control-Max-Age' 1728000;
+      add_header 'Content-Type' 'text/plain; charset=utf-8';
+      add_header 'Content-Length' 0;
+      return 204;
+    }
+    if ($request_method = 'POST') {
+      add_header 'Access-Control-Allow-Origin' '*' always;
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+      add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+      add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+    }
+    if ($request_method = 'GET') {
+      add_header 'Access-Control-Allow-Origin' '*' always;
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+      add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+      add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+    }
   }
 }
