feat: update deploy file

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "start": "PORT=5000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "aws s3 sync build/ s3://ticket-club-react",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
