--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,41 +6,23 @@ on:
       - develop
 
 jobs:
-  continuous-integration:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        build-args: |
-          REACT_APP_DOMAIN=${{ secrets.REACT_APP_DOMAIN }}
-          REACT_APP_SOCKET=${{ secrets.REACT_APP_SOCKET }}
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ticket-club-nginx:latest
-  continuous-deployment:
-    runs-on: ubuntu-latest
-    needs: continuous-integration
-    steps:
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-    - name: Create CodeDeploy Deployment
-      id: deploy
-      run: |
-        aws deploy create-deployment \
-          --application-name ticket-club \
-          --deployment-group-name AutoScaleDeploymentGroup \
-          --deployment-config-name CodeDeployDefault.OneAtATime \
-          --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install
+      - run: yarn install
+      - name: Build
+      - run: yarn build
+      - name: Upload to S3
+      - uses: shinyinc/action-aws-cli@v1.2
+      - run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Invalidation Cloudfront
+      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/index.html"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
