--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,17 +12,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install
-      - run: yarn install
+        run: yarn install
       - name: Build
-      - run: yarn build
+        run: yarn build
       - name: Upload to S3
-      - uses: shinyinc/action-aws-cli@v1.2
-      - run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
+        uses: shinyinc/action-aws-cli@v1.2
+        run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - name: Invalidation Cloudfront
-      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/index.html"
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/index.html"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
