--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,9 @@ jobs:
         run: yarn install
       - name: Build
         run: yarn build
-      - name: Upload to S3
+      - name: S3
         uses: shinyinc/action-aws-cli@v1.2
+      - name: Upload to S3
         run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
