--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,14 +15,13 @@ jobs:
         run: yarn install
       - name: Build
         run: yarn build
-      - name: S3
-        uses: shinyinc/action-aws-cli@v1.2
+      - uses: shinyinc/action-aws-cli@v1.2
       - name: Upload to S3
         run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      - name: Invalidation Cloudfront
+      - name: Invalidate Cloudfront
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/index.html"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
