--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,7 @@ jobs:
       - name: Build
         run: yarn build
       - uses: shinyinc/action-aws-cli@v1.2
-      - name: Upload to S3
-        run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
+      - run: aws s3 sync build s3://${{ secrets.AWS_S3_BUCKET_NAME }}/
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
